--- a/resources/template/Template Main/Template Main/shop-list.html
+++ b/resources/template/Template Main/Template Main/shop-list.html
@@ -221,7 +221,7 @@
 							<div class="col-12">
 								<div class="menu-area">
 									<!-- Main Menu -->
-									<nav class="navbar navbar-expand-lg">
+									<nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm ">
 										<div class="navbar-collapse">	
 											<div class="nav-inner">	
 												<ul class="nav main-menu menu navbar-nav">
